<resources>
    <string name="app_name">Food</string>
    <string name="all_restaurants">All Restaurants</string>
    <string name="my_orders">My Orders</string>
    <string name="my_profile">My Profile</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="logout">Log Out</string>
    <string name="menu">Menu</string>
    <string name="avatar">Avatar</string>
    <string name="search_hint">Search restaurants...</string>
    <string name="search_icon">Search Icon</string>
    <string name="search_button">Search Button</string>
    <string name="popular_restaurants">Popular Restaurants</string>
    <string name="view_all">View all</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="what_to_order">What would you like to order</string>
    <string-array name="user_roles">
        <item>USER</item>
        <item>ADMIN</item>
        <item>BUSINESS</item>
    </string-array>
</resources>